#<!***************************************************************************
#<!created:  2015-01-01
#<!filename: CMakeLists.txt
#<!author:   自修 yjlfuture@163.com(jianlin.yjl@alibaba-inc.com)
#<!breaf:
#<!***************************************************************************

add_subdirectory(modules)
add_subdirectory(jsoncpp)
add_subdirectory(log4cplus)
